# Web4AGI

./: .coverage  .pre-commit-config.yaml  README.md  coverage.xml  mcp-tools.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: main.py
src/agents/: parcel_agent.py  trade_agent.py
src/api/: __init__.py  contracts.py  mcp.py  parcels.py  payments.py  trades.py
src/graphs/: __init__.py  langgraph_workflow.py
src/mcp/: mcp_tools.py
src/models/: __init__.py  parcel_models.py
src/payments/: __init__.py  x402_client.py
src/routers/: RouteXRouter.ts
src/servers/: ExchangeServer.ts  ParcelAgentServer.ts
tests/: conftest.py  test_agents.py  test_graphs.py  test_mcp.py  test_payments.py  verify_communication.py
tests/e2e/: __init__.py  test_workflows.py
tests/integration/: __init__.py  test_agent_integration.py  test_api.py  test_api_v1.py  test_contract_flow.py  test_trading_flow.py  test_websocket.py
tests/load/: locustfile.py
tests/unit/: test_graphs.py
